--- a/frontend/src/app/pages/my-ads/my-ads.component.css
+++ b/frontend/src/app/pages/my-ads/my-ads.component.css
@@ -94,7 +94,8 @@
 
 .cards-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  /*grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));*/
+  grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   padding: 0 2rem;
 }
@@ -108,7 +109,6 @@
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  flex: 1 1 250px;
 }
 
 .card:hover {
